--- a/index.html
+++ b/index.html
@@ -2,4 +2,9 @@
 layout: default
 ---
 
-<h1>HOME</h1>
+<h1>About</h1>
+
+<h2>Latest News:</h2>
+{% for post in site.posts limit:1 %}
+  {% include post_preview.html %}
+{% endfor %}
