--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: home
   <!-- <img class="home-not-hero" src="/images/keyboard-regular.svg" alt="Keyboard icon by Font Awesome, more info in footer"/><img class="home-not-hero" src="/images/keyboard-solid.svg" alt="Keyboard icon by Font Awesome, more info in footer"/> -->
   <h1><i class="fas fa-keyboard fa-5x"></i>*<i class="far fa-keyboard fa-5x"></i></h1>
   <h3>Say Goodbye to Wires</h3>
-  <p class="center">tty is on a mission to build an opensource, wire-free mechanical keyboard.</p>
+  <p class="center">tty is on a mission to build an opensource, wire-free mechanical keyboard</p>
 </section>
 
 <section>
