--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@ layout: home
         <li>NKRO</li>
         <li>Fully Programmable</li>
         <li>NFC Pairing</li>
+        <li>Over the Air Keymap Updates</li>
         <li>Over the Air Firmware Updates</li>
         <li>AFK Autosleep</li>
         <li>Long Lasting LiPo Battery</li>
+        <li>iOS / Android keymap config app</li>
       </ul>
     </div>
   </div>
