--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@ layout: home
 <section>
   <!-- <img class="home-not-hero" src="/images/keyboard-regular.svg" alt="Keyboard icon by Font Awesome, more info in footer"/><img class="home-not-hero" src="/images/keyboard-solid.svg" alt="Keyboard icon by Font Awesome, more info in footer"/> -->
   <h1><i class="fas fa-keyboard fa-5x"></i>*<i class="far fa-keyboard fa-5x"></i></h1>
-  <h3>Say Goodbye to Wires</h3>
+  <h2>Say goodbye to wires</h2>
   <p class="center">tty is building an opensource, wire-free mechanical keyboard.</p>
-</section>
 
-<section>
-<h2>Features</h2>
   <div class="home-row">
     <div class="home-feature three">
       <h3><i class="fab fa-bluetooth-b fa-2x"></i></h3>
@@ -39,17 +36,6 @@ layout: home
     </div>
   </div>
 </section>
-
-<!-- <section>
-  <h2>Roadmap</h2>
-  <h4>Stage One: Research</h4>
-  <ol>
-    <li>Build Proof of Concept</li>
-    <li>Assess available MCUs</li>
-    <li>Assess available firmware</li>
-    <li>Assess Market Interest</li>
-  </ol>
-</section> -->
 
 <section>
   <h2>Latest News</h2>
