Update discord link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: home
   <h2>FAQ</h2>
   <ul>
     <li><b>Is there a project roadmap?</b> <span><a href="/posts/status-report-2/">Status Report #2</a> is the latest roadmap.</span></li>
-    <li><b>How can I follow the project or contribute?</b> <span>You can either subscribe to our <a href="https://mailchi.mp/99f0594eda3d/ttykeyboards">mailing list</a>, follow me on <a href="https://twitter.com/jordanmajd">twitter</a> or <a href="https://discord.gg/B8Zw4wq"> join our Discord.</a></span></li>
+    <li><b>How can I follow the project or contribute?</b> <span>You can either subscribe to our <a href="https://mailchi.mp/99f0594eda3d/ttykeyboards">mailing list</a>, follow me on <a href="https://twitter.com/jordanmajd">twitter</a> or <a href="https://discord.gg/uMQxabG"> join our Discord.</a></span></li>
   </ul>
 </section>
 {% endcapture %}
